install pkg from github forked branch

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "eas build -p android --profile development --local"
   },
   "dependencies": {
-    "@charmy.tech/react-native-stroke-text": "file:./packages/react-native-stroke-text",
+    "@charmy.tech/react-native-stroke-text": "github:Honghui-Li-8/react-native-stroke-text#new-arch-support",
     "expo": "~54.0.31",
     "expo-dev-client": "~6.0.20",
     "expo-status-bar": "~3.0.9",
