build and runs correctly but pkg still not correctly render text (no render)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "upgrade:stroke-text": "yarn upgrade @charmy.tech/react-native-stroke-text@github:Honghui-Li-8/react-native-stroke-text#new-arch"
   },
   "dependencies": {
-    "@charmy.tech/react-native-stroke-text": "github:Honghui-Li-8/react-native-stroke-text#new-arch",
+    "@charmy.tech/react-native-stroke-text": "github:Honghui-Li-8/react-native-stroke-text#new-arch-support",
     "expo": "~54.0.31",
     "expo-dev-client": "~6.0.20",
     "expo-status-bar": "~3.0.9",
